feat: add delete book endpoint
